--- a/.github/workflows/run_examples_spe1.yml
+++ b/.github/workflows/run_examples_spe1.yml
@@ -72,7 +72,8 @@ jobs:
 
     - name: Run spe1 demo
       run: |
-        pushd examples/spe1
+        ert3 init --example spe1
+        pushd spe1
         ./run_demo
         popd
 
